--- a/Project.toml
+++ b/Project.toml
@@ -9,7 +9,7 @@ Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 
 [compat]
-CompetingClocks = "0.1.0"
-Distributions = "0.25.120"
-Logging = "1.11.0"
-julia = "1.11.6"
+CompetingClocks = "^0.1.0"
+Distributions = "^0.25.120"
+Logging = "^1.11.0"
+julia = "^1.11.6"
