--- a/Project.toml
+++ b/Project.toml
@@ -7,9 +7,11 @@ version = "0.1.0-DEV"
 CompetingClocks = "5bb9b785-358c-4fee-af0f-b94a146244a8"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
+OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
 
 [compat]
 CompetingClocks = "^0.1.0"
 Distributions = "^0.25.120"
 Logging = "^1.11.0"
+OrderedCollections = "1.8.1"
 julia = "^1.11.6"
