--- a/test/Project.toml
+++ b/test/Project.toml
@@ -5,5 +5,6 @@ CompetingClocks = "5bb9b785-358c-4fee-af0f-b94a146244a8"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 JuliaFormatter = "98e50ef6-434e-11e9-1051-2b60c6c9e899"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
+OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 ReTest = "e0db7c4e-2690-44b9-bad6-7687da720f89"
