--- a/Project.toml
+++ b/Project.toml
@@ -8,10 +8,12 @@ CompetingClocks = "5bb9b785-358c-4fee-af0f-b94a146244a8"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 
 [compat]
 CompetingClocks = "^0.1.0"
 Distributions = "^0.25.120"
 Logging = "^1.11.0"
 OrderedCollections = "1.8.1"
+Random = "1.11.0"
 julia = "^1.11.6"
